objects/Profit_and_Loss__c.object
<CustomObject>
    <description>This object will be used to store Customer Income Statement.</description>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Income_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CostOfOperation__c</fullName>
        <description>ค่าใช้จ่ายในการดำเนินงาน</description>
        <label>Cost of Operation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostOfSalesAndOrServices__c</fullName>
        <description>ต้นทุนขาย และ/หรือ บริการ</description>
        <label>Cost of Sales and / or Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Depreciate__c</fullName>
        <description>หักค่าเสื่อม</description>
        <label>Depreciate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>InitialProfitLoss__c</fullName>
        <description>กำไร (ขาดทุน) ขั้นต้น</description>
        <label>Initial Profit (Loss)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetProfitLoss__c</fullName>
        <description>กำไร (ขาดทุน) สุทธิ</description>
        <label>Net Profit (Loss)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OperationIncome__c</fullName>
        <description>รายได้จากการดำเนินงาน</description>
        <label>Operation Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OtherIncome__c</fullName>
        <description>รายได้อื่นๆ</description>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxAndEtcAdjustItem__c</fullName>
        <label>Tax and Etc. (Adjust Item)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalIncome__c</fullName>
        <description>รวมรายได้</description>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Profit and Loss</label>
    <nameField>
        <label>Fiscal Year</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profit and Loss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>